manifest/ingress.yaml
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  labels:
    app: foo
spec:
  containers:
    - name: foo-app
      image: 'kicbase/echo-server:1.0'
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
spec:
  selector:
    app: foo
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  labels:
    app: bar
spec:
  containers:
    - name: bar-app
      image: 'kicbase/echo-server:1.0'
---
kind: Service
apiVersion: v1
metadata:
  name: bar-service
spec:
  selector:
    app: bar
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-foo
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /foo
        backend:
          service:
            name: foo-service
            port:
              number: 80
  ingressClassName: nginx-eastus
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-bar
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /bar
        backend:
          service:
            name: bar-service
            port:
              number: 80
  ingressClassName: nginx-westus #TODO:
